Some notes for third sheet

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -9,3 +9,9 @@ title =     {An Introduction to Integration and Measure Theory},
 author =    {Ole A. Nielsen},
 publisher = {Wiley-Interscience},
 year =      1997}
+@book{hesse,
+title={Angewandte Wahrscheinlichkeitstheorie},
+author={Hesse, Christian H},
+year={2003},
+publisher={Springer-Verlag}
+}
