--- a/books/wt.bib
+++ b/books/wt.bib
@@ -15,3 +15,11 @@ author={Hesse, Christian H},
 year={2003},
 publisher={Springer-Verlag}
 }
+@misc{tsitsiklis,
+title={Convergence in probability of the sum of two random variables: Introduction to probability: Supplemental Resources},
+howpublished="\url{https://ocw.mit.edu/courses/res-6-012-introduction-to-probability-spring-2018/resources/convergence-in-probability-of-the-sum-of-two-random-variables/}",
+journal={MIT OpenCourseWare},
+publisher={MIT OpenCourseWare},
+author={Tsitsiklis, John},
+year=2018
+}
