--- a/homeworks/03/sol/03.tex
+++ b/homeworks/03/sol/03.tex
@@ -34,22 +34,35 @@ Existiert $\lim|X_n-X|$ fast sicher, dann gilt auch fast sicher $\lim|X_n-X|=\li
 \begin{align*}
   P(\lim|X_n-X|\geq\varepsilon)
   &=P(\limsup\{{|X_n-X|\geq\varepsilon}\})\,,
-    \intertext{und mit der Definition des $\limsup$}
+    \intertext{\emph{wobei man hier zwischen dem Abbildungen-$\limsup$ und dem Mengen-$\limsup$ unterscheiden muss} und mit der Definition des $\limsup$}
   &=P\Bigl(\bigcap\nolimits_{n}^\infty\bigcup\nolimits_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}\Bigr)\,.
     \intertext{Hierbei konvergiert die Folge $\bigl(\bigcup_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}\bigr)_n$ von oben gegen $\bigcap\nolimits_{n}^\infty\bigcup\nolimits_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}$, sodass wir nach Satz A.14 den Limes herausziehen können und sich ergibt}
   &=\lim\nolimits_{n}P\Bigl(\bigcup\nolimits_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}\Bigr)\,.
-    \intertext{Sei $\omega\in\bigcup_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}$, dann gilt \emph{Hier noch Argumentation einfügen}}
-  &=\lim\nolimits_n P(\sup\nolimits_{m\geq n}|X_m-X|\geq\varepsilon)=0\,.
 \end{align*}
-Da die Beziehung für beliebige $\varepsilon>0$ gilt, ist dies mit der Definition der stochastischen Konvergenz 14.ii äquivalent zu $\sup_{m\geq n}|X_n-X|\xrightarrow{P}0$.
+Wir möchten nun noch die Äquivalenz zu $\sup_{m\geq n}|X_n-X|\xrightarrow{P}0$ zeigen.
+Da für alle $n\in\mathbb{N}$ gilt $\{\sup_{m\geq n}|X_m-X|\geq\varepsilon\}\subseteq\bigcup_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}$ folgt mit der Monotonie von $P$, dass
+\begin{align*}
+  P(\sup\nolimits_{m\geq n}|X_m-X|\geq\varepsilon)
+  &\leq P\Bigl(\bigcup\nolimits_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}\Bigr)\,.
+    \intertext{Andererseits gilt für alle $k\geq n$, dass $\sup_{m\geq n}|X_m-X|\geq|X_k-X|$, sodass}
+    &\leq P(\sup\nolimits_{m\geq n}|X_m-X|\geq\varepsilon)\,.
+\end{align*}
+Es folgt $\lim\nolimits_nP(\sup\nolimits_{m\geq n}|X_m-X|\geq\varepsilon)=P\bigl(\bigcup\nolimits_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}\bigr)$, denn $n\in\mathbb{N}$ war beliebig gewählt.
+Da die Beziehung für beliebige $\varepsilon>0$ gilt, ist die gesuchte Äquivalenz mit der Definition der stochastischen Konvergenz 14.ii gezeigt.
 
 Zur Teilaufgabe (b), wir bemerken, dass, wenn $(X_n)_n$ fast sicher gegen ein $X$ konvergiert, dann konvergiert $|X_n-X|\wedge1$ fast sicher gegen 0.
 Da $|X_n-X|\wedge1$ die 1 als integrierbare Majorante hat,  konvergiert mit Theorem 14 über majorisierte Konvergenz $E[|X_n-X|\wedge 1]$ fast sicher gegen 0 und schließlich nach Lemma 17 $X_n$ stochastisch gegen $X$.
 
-\emph{Alternativ nutze Satz 6.2.2 in \cite{hesse}.}
+Als alternative Lösung gehen wie im Beweis zu Satz 6.2.2 in \cite{hesse} vor.
+Nach Teilaufgabe (a) gilt $\lim_nP\bigl(\bigcup\nolimits_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}\bigr)=0$.
+Für alle $n\in\mathbb{N}$ gilt die Inklusion $\{|X_n-X|\geq\varepsilon\}\subseteq\bigcup\nolimits_{m=n}^\infty\{|X_m-X|\geq\varepsilon\}$.
+Aufgrund der Monotonie von $P$ gilt somit auch $\lim_{n}P(|X_n-X|\geq\varepsilon)=0$, also  $X_n\xrightarrow{P}X$.
 
-Zur Teilaufgabe (c), hier wollen wir zeigen, dass $(X_n)_n$ genau dann fast sicher konvergiert, wenn für alle $\varepsilon>0$ gilt, dass $\lim_n P\bigl(\bigcup_m^\infty\{|X_{m+n}-X_n|\geq\varepsilon\}\bigr)=0$.
-\emph{Auch hier fehlt Argumentation.}
+Zur Teilaufgabe (c), hier wollen wir zeigen, dass $(X_n)_n$ genau dann fast sicher konvergiert, wenn gilt, dass $\lim_n P\bigl(\bigcup_m^\infty\{|X_{m+n}-X_n|\geq\varepsilon\}\bigr)=0$.
+Wir nehmen zunächst an, dass $(X_n)_n$ fast sicher gegen $X$ konvergiert.
+Mit Teilaufgabe (a) konvergiert dann $\sup_{m\geq n}|X_m-X|\xrightarrow{P}0$.
+\emph{Hier fehlt noch Argumentation.}
+%https://math.stackexchange.com/questions/627005/convergence-of-sequence-of-random-variables-and-cauchy-sequences
 \newpage
 \paragraph{B3A2}
 Bei Teilaufgabe (a) ist zu zeigen, dass wenn $X_n\leq Y_n\leq Z_n$ für alle $n\in\mathbb{N}$ und $X_n\xrightarrow{P}X$, $Y_n\xrightarrow{P}Y$ sowie $Z_n\xrightarrow{P}Z$, dann $X_n+Y_n\xrightarrow{P}X+Y$, also dass für alle $\varepsilon>0$ gilt $P(|X_n-X+Y_n-Y|>\varepsilon)=0$.
@@ -78,8 +91,10 @@ In Analogie zur Konvergenz der reellen Folgen $(a_n)_n$ und $(b_n)_n$ gilt mit d
 Bei Teilaufgabe (b) konvergiert nun zusätzlich $E[X_n]\to E[X]$ und $E[Z_n]\to E[Z]$ und wir sollen zeigen, dass $E[Y_n]\to E[Y]$.
 Entsprechend dem Tipp zeigen wir, dass $(Y_n)_n$ gleichgradig integrierbar ist, also, dass $\lim_{k}\sup_{n}E[|Y_n|\mathbbm{1}_{|X_n|>k}]=0$.
 Nach Theorem 22 gilt dann $Y_n\xrightarrow{\mathcal{L}_1}Y$, also $E[Y_n]\to E[Y]$.
-Da $X_n\leq Y_n\leq Z_n$ ist $|Y_n|\leq|X_n|\vee|Z_n|$ für alle $n$ und somit auch $|Y_n|\leq|X|\vee|Z|$ \emph{wobei das nicht so richtig folgt}.
-Nach Beispiel 19.i ist $(Y_n)_n$ gleichgradig integrierbar.
+Da $X_n\leq Y_n\leq Z_n$ ist $|Y_n|\leq|X_n|\vee|Z_n|$ für alle $n$.
+Da $E[X_n]\to E[X]$ und $E[Y_n]\to E[Y]$ folgt mit Satz 10.v, dass $|X_n|\vee|Z_n|$ nach oben beschränkt ist.
+Somit hat $(Y_n)_n$ eine integrierbare Majorante und ist nach Beispiel 19.i gleichgradig integrierbar.
+Wie erwähnt, folgt mit Theorem 22, dass $E[Y_n]\to E[Y]$.
 \newpage
 \paragraph{B3A3}
 Wir haben hier $K_n=\prod_{i=1}^nY_i$ mit $P\bigl(Y_i=\frac{5}{3}\bigr)=P\bigl(Y_i=\frac{1}{2}\bigr)=\frac{1}{2}$ gegeben und sollen bei Aufgabe (a) $EK_n$ bestimmen sowie zeigen, dass $\lim_n EK_n=\infty$.
